fixed port ui/ux section x overflow

--- a/src/app/port/page.css
+++ b/src/app/port/page.css
@@ -213,7 +213,7 @@
         display: flex;
         flex-direction: column;
         row-gap: 2rem;
-        overflow-x: hidden;
+        /* overflow-x: hidden; */
         overflow-y: scroll;
         margin-top: .5rem;
         padding-bottom: 15rem;
@@ -228,6 +228,8 @@
     .project-company {
         font-size: 2rem;
         margin-top: -.5rem;
+        width: 100%;
+        min-width: 0;
     }
 
     .project-img {
